Version 5.0.18 - 2020-02-02
* Bug fixes (see mercurial logs for details)

Version 5.0.17 - 2019-12-16
* Bug fixes (see mercurial logs for details)

Version 5.0.16 - 2019-12-02
* Bug fixes (see mercurial logs for details)

Version 5.0.15 - 2019-11-08
* Bug fixes (see mercurial logs for details)

Version 5.0.14 - 2019-10-06
* Bug fixes (see mercurial logs for details)

Version 5.0.13 - 2019-09-15
* Bug fixes (see mercurial logs for details)

Version 5.0.12 - 2019-08-17
* Bug fixes (see mercurial logs for details)

Version 5.0.11 - 2019-08-01
* Bug fixes (see mercurial logs for details)

Version 5.0.10 - 2019-07-17
* Bug fixes (see mercurial logs for details)

Version 5.0.9 - 2019-07-01
* Bug fixes (see mercurial logs for details)

Version 5.0.8 - 2019-06-10
* Bug fixes (see mercurial logs for details)

Version 5.0.7 - 2019-04-22
* Bug fixes (see mercurial logs for details)
* Replace dsn by params to connect to postgresql

Version 5.0.6 - 2019-04-02
* Bug fixes (see mercurial logs for details)
* Check read access on field in search order (issue8189)

Version 5.0.5 - 2019-02-19
* Bug fixes (see mercurial logs for details)

Version 5.0.4 - 2019-01-22
* Bug fixes (see mercurial logs for details)

Version 5.0.3 - 2019-01-05
* Bug fixes (see mercurial logs for details)

Version 5.0.2 - 2018-12-02
* Bug fixes (see mercurial logs for details)

Version 5.0.1 - 2018-11-12
* Bug fixes (see mercurial logs for details)
* Check read access on field in search domain (issue7766)

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Allow non translatable reports
* Replace hard coded 'state' by '_transition_state' in copy
* Support dotted notation in copy default
* Allow callable in copy default
* Add bus system
* Allow to set any default configuration value from environment
* Clear existing session when password is changed
* Manage session with max_age and timeout
* Use passlib to hash and update password
* Remove unique constraint on attachment name
* New icons